--- a/music1205.html
+++ b/music1205.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>CodeList</h1>
-        <table class="Code" border="1">
+        <table id="Cbutton" class="Code" border="1" >
             <tr>
                 <th>コード名</th><th>音名</th><th>音</th>
                 <th>コード名</th><th>音名</th><th>音</th>
@@ -16,65 +16,66 @@
                 <th>コード名</th><th>音名</th><th>音</th>
             </tr>
             <tr>
-                <td>C</td><td>ドミソ</td><td><button id="playButton0">♪</button></td>
-                <td>Cm</td><td>ドミ♭ソ</td><td><button id="playButton1">♪</button></td>
-                <td>CM7</td><td>ドミソシ</td><td><button id="playButton2">♪</button></td>
-                <td>C7</td><td>ドミソシ♭</td><td><button id="playButton3">♪</button></td>
-                <td>Cm7</td><td>ドミ♭ソシ♭</td><td><button id="playButton4">♪</button></td>
+                <td>C</td><td>ドミソ</td><td><button id="My Song (0).mp3">♪</button></td>
+                <td>Cm</td><td>ドミ♭ソ</td><td><button id="My Song (1).mp3">♪</button></td>
+                <td>CM7</td><td>ドミソシ</td><td><button id="My Song (2).mp3">♪</button></td>
+                <td>C7</td><td>ドミソシ♭</td><td><button id="My Song (3).mp3">♪</button></td>
+                <td>Cm7</td><td>ドミ♭ソシ♭</td><td><button id="My Song (4).mp3">♪</button></td>
             </tr>
 
             <tr>
-                <td>D</td><td>レファ#ラ</td><td><button class="playButton">♪</button></td>
-                <td>Dm</td><td>レファラ</td><td><button class="playButton">♪</button></td>
-                <td>DM7</td><td>レファ#ラド#</td><td><button class="playButton">♪</button></td>
-                <td>D7</td><td>レファ#ラド</td><td><button class="playButton">♪</button></td>
-                <td>Dm7</td><td>レファラド</td><td><button class="playButton">♪</button></td>
+                <td>D</td><td>レファ#ラ</td><td><button id="My Song (5).mp3">♪</button></td>
+                <td>Dm</td><td>レファラ</td><td><button id="My Song (6).mp3">♪</button></td>
+                <td>DM7</td><td>レファ#ラド#</td><td><button id="My Song (7).mp3">♪</button></td>
+                <td>D7</td><td>レファ#ラド</td><td><button id="My Song (8).mp3">♪</button></td>
+                <td>Dm7</td><td>レファラド</td><td><button id="My Song (9).mp3">♪</button></td>
             </tr>
 
             <tr>
-                <td>E</td><td>ミソ#シ</td><td><button class="playButton">♪</button></td>
-                <td>Em</td><td>ミソシ</td><td><button class="playButton">♪</button></td>
-                <td>EM7</td><td>ミソ#シレ#</td><td><button class="playButton">♪</button></td>
-                <td>E7</td><td>ミソ#シレ</td><td><button class="playButton">♪</button></td>
-                <td>Em7</td><td>ミソシレ</td><td><button class="playButton">♪</button></td>
+                <td>E</td><td>ミソ#シ</td><td><button id="My Song (10).mp3">♪</button></td>
+                <td>Em</td><td>ミソシ</td><td><button id="My Song (11).mp3">♪</button></td>
+                <td>EM7</td><td>ミソ#シレ#</td><td><button id="My Song (12).mp3">♪</button></td>
+                <td>E7</td><td>ミソ#シレ</td><td><button id="My Song (13).mp3">♪</button></td>
+                <td>Em7</td><td>ミソシレ</td><td><button id="My Song (14).mp3">♪</button></td>
             </tr>
 
             <tr>
-                <td>F</td><td>ファラド</td><td><button class="playButton">♪</button></td>
-                <td>Fm</td><td>ファラ♭ド</td><td><button class="playButton">♪</button></td>
-                <td>FM7</td><td>ファラドミ</td><td><button class="playButton">♪</button></td>
-                <td>F7</td><td>ファラドミ♭</td><td><button class="playButton">♪</button></td>
-                <td>Fm7</td><td>ファラ♭ドミ♭</td><td><button class="playButton">♪</button></td>
+                <td>F</td><td>ファラド</td><td><button id="My Song (15).mp3">♪</button></td>
+                <td>Fm</td><td>ファラ♭ド</td><td><button id="My Song (16).mp3">♪</button></td>
+                <td>FM7</td><td>ファラドミ</td><td><button id="My Song (17).mp3">♪</button></td>
+                <td>F7</td><td>ファラドミ♭</td><td><button id="My Song (18).mp3">♪</button></td>
+                <td>Fm7</td><td>ファラ♭ドミ♭</td><td><button id="My Song (19).mp3">♪</button></td>
             </tr>
 
             <tr>
-                <td>G</td><td>ソシレ</td><td><button class="playButton">♪</button></td>
-                <td>Gm</td><td>ソシ♭レ</td><td><button class="playButton">♪</button></td>
-                <td>GM7</td><td>ソシレファ#</td><td><button class="playButton">♪</button></td>
-                <td>G7</td><td>ソシレファ</td><td><button class="playButton">♪</button></td>
-                <td>Gm7</td><td>ソシ♭レファ</td><td><button class="playButton">♪</button></td>
+                <td>G</td><td>ソシレ</td><td><button id="My Song (20).mp3">♪</button></td>
+                <td>Gm</td><td>ソシ♭レ</td><td><button id="My Song (21).mp3">♪</button></td>
+                <td>GM7</td><td>ソシレファ#</td><td><button id="My Song (22).mp3">♪</button></td>
+                <td>G7</td><td>ソシレファ</td><td><button id="My Song (23).mp3">♪</button></td>
+                <td>Gm7</td><td>ソシ♭レファ</td><td><button id="My Song (24).mp3">♪</button></td>
             </tr>
 
             <tr>
-                <td>A</td><td>ラド#ミ</td><td><button class="playButton">♪</button></td>
-                <td>Am</td><td>ラドミ</td><td><button class="playButton">♪</button></td>
-                <td>AM7</td><td>ラド#ミソ#</td><td><button>♪</button></td>
-                <td>A7</td><td>ラド#ミソ</td><td><button class="playButton">♪</button></td>
-                <td>Am7</td><td>ラドミソ</td><td><button class="playButton">♪</button></td>
+                <td>A</td><td>ラド#ミ</td><td><button id="My Song (25).mp3">♪</button></td>
+                <td>Am</td><td>ラドミ</td><td><button id="My Song (26).mp3">♪</button></td>
+                <td>AM7</td><td>ラド#ミソ#</td><td><button id="My Song (27).mp3">♪</button></td>
+                <td>A7</td><td>ラド#ミソ</td><td><button id="My Song (28).mp3">♪</button></td>
+                <td>Am7</td><td>ラドミソ</td><td><button id="My Song (29).mp3">♪</button></td>
             </tr>
 
             <tr>
-                <td>B</td><td>シレ#ファ#</td><td><button class="playButton">♪</button></td>
-                <td>Bm</td><td>シレファ#</td><td><button class="playButton">♪</button></td>
-                <td>BM7</td><td>シレ#ファ#ラ#</td><td><button class="playButton">♪</button></td>
-                <td>B7</td><td>シレ#ファ#ラ</td><td><button class="playButton">♪</button></td>
-                <td>Bm7</td><td>シレファ#ラ</td><td><button class="playButton">♪</button></td>
+                <td>B</td><td>シレ#ファ#</td><td><button id="My Song (30).mp3">♪</button></td>
+                <td>Bm</td><td>シレファ#</td><td><button id="My Song (31).mp3">♪</button></td>
+                <td>BM7</td><td>シレ#ファ#ラ#</td><td><button id="My Song (32).mp3">♪</button></td>
+                <td>B7</td><td>シレ#ファ#ラ</td><td><button id="My Song (33).mp3">♪</button></td>
+                <td>Bm7</td><td>シレファ#ラ</td><td><button id="My Song (34).mp3">♪</button></td>
             </tr>
         </table>
 
         <h1>セオリー</h1>
+            <input id="upload-file" type="file">
             <input type="text" id="inputCode">
-            <button id="Theory">検索</button>
+            <button id="theory">検索</button>
             <p id="result">結果がここに表示されます。</p>
 
 
